@@ -94,6 +94,17 @@ max_head_length:	10000
 search_algorithm:	exact:1 synonyms:0.5 endings:0.1
 
 #
+# The following are the templates used in the builtin search results
+# The default is to use compiled versions of these files, which produces
+# slightly faster results. However, uncommenting these lines makes it
+# very easy to change the format of search results.
+# See <http://www.htdig.org/hts_templates.html for more details.
+#
+# template_map: Long long ${common_dir}/long.html \
+#		Short short ${common_dir}/short.html
+# template_name: long
+
+#
 # The following are used to change the text for the page index.
 # The defaults are just boring text numbers.  These images spice
 # up the result pages quite a bit.  (Feel free to do whatever, though)
