@@ -1,3 +1,11 @@
+Mon Mar 22 15:56:55 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
+
+	* installdir/long.html, installdir/short.html: Write out HTML
+	versions of the builtin templates.  (committed to 3.1.2 by Gilles)
+
+	* installdir/htdig.conf: Add commented-out template_map and
+	template_name attributes to use the on-disk versions.
+
 Mon Mar 22 15:13:33 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htcommon/defaults.cc, htdoc/attrs.html: Change default locale
